<resources>
    <string name="app_name">Janta Shop</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="women_s_fashion">Women\'s Fashion</string>
    <string name="mobile_accessories"><![CDATA[Mobile & Accessories]]></string>
    <string name="headphones_earphones"><![CDATA[Headphones & Earphones]]></string>
    <string name="_57"><strike>$57</strike></string>
    <string name="_150"><strike>$150</strike></string>
    <string name="refer_earn"><![CDATA[Refer & Earn]]></string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="rs">\u20B9</string>
    <string name="buy_earn"><![CDATA[BUY & EARN]]></string>
    <string name="save_continue"><![CDATA[Save & Continue]]></string>
</resources>