<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>

    <item android:title="Men's Fashion"
        android:icon="@drawable/ic_menu_send">
        <menu>
            <item android:title="T-shirt store"/>
            <item android:title="Clothing"/>
            <item android:title="Footwear"/>
            <item android:title="Watches"/>
            <item android:title="Sportswear"/>
        </menu>
    </item>

    <item android:title="Women's Fashion"
        android:icon="@drawable/ic_menu_send">
        <menu>
            <item android:title="Clothing"/>
            <item android:title="Jewellery"/>
            <item android:title="Footwear"/>
            <item android:title="Beauty"/>
        </menu>
    </item>


</menu>