<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/ic_menu_send"
        android:title="Men's Fashion">
        <menu>
            <item
                android:id="@+id/categoryMensTShirt"
                android:icon="@drawable/t_shirt_store_icon"
                android:title="T-Shirt Store" />
            <item
                android:id="@+id/categoryMensClothing"
                android:icon="@drawable/account_icon"
                android:title="Clothing" />
            <item
                android:id="@+id/categoryMensFootwear"
                android:icon="@drawable/ic_menu_manage"
                android:title="Footwear" />
            <item
                android:id="@+id/categoryMensWatches"
                android:icon="@drawable/home_icon"
                android:title="Watches" />
        </menu>
    </item>

    <item
        android:icon="@drawable/ic_menu_send"
        android:title="@string/women_s_fashion">
        <menu>
            <item
                android:id="@+id/categoryWomenClothing"
                android:icon="@drawable/ic_menu_manage"
                android:title="Clothing" />
            <item
                android:id="@+id/categoryWomenJewellery"
                android:icon="@drawable/home_icon"
                android:title="Jewellery" />
            <item
                android:id="@+id/categoryWomenFootwear"
                android:icon="@drawable/ic_menu_manage"
                android:title="Footwear" />
            <item
                android:id="@+id/categoryWomenBeauty"
                android:icon="@drawable/home_icon"
                android:title="Beauty" />
        </menu>
    </item>

    <item
        android:icon="@drawable/ic_menu_send"
        android:title="@string/mobile_accessories">
        <menu>
            <item
                android:id="@+id/categoryMobileSmartphones"
                android:icon="@drawable/ic_menu_manage"
                android:title="Smartphones" />
            <item
                android:id="@+id/categoryMobileTablets"
                android:icon="@drawable/home_icon"
                android:title="Tablets" />
            <item
                android:id="@+id/categoryMobileHeadphones"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/headphones_earphones" />
            <item
                android:id="@+id/categoryMobilePowerbank"
                android:icon="@drawable/home_icon"
                android:title="Power Bank" />
        </menu>
    </item>
</menu>